[package]
name = "transfer_api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
warp       = "0.3"
tokio      = { version = "1", features = ["rt", "macros"] }
serde      = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0.140"
clap = { version = "4.5.38", features = ["derive"] }
futures-util = "0.3.31"
