[package]
name = "universal_file_transfer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
transfer_api = { path = "../transfer_api" }
#加密
rand = { version = "0.8", features = ["std"] }
aead = "0.5"
aes-gcm = "0.10"
sha2 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"
rand_core = "0.6"
hex = "0.4"
# URL 解析
url = "2.3"
futures-util = "0.3.31"
tokio-tungstenite = "0.21.0"
anyhow = "1.0.98"
serde_json = "1.0.140"

